Loop cut slide #35085

Closed
opened 2013-04-26 07:44:45 +02:00 by Vasyl Pidhirskyi · 13 comments

%%%--- Operating System, Graphics card ---

- Blender version with error, and version that worked ---

2.66.6 r56284

- Short description of error ---

Loop cut slide useless when 2 cuts it gives weird results in different cases. A also disable when use 3 and more cuts or edge loop is cyclic

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

%%%

%%%--- Operating System, Graphics card --- - Blender version with error, and version that worked --- 2.66.6 r56284 - Short description of error --- Loop cut slide useless when 2 cuts it gives weird results in different cases. A also disable when use 3 and more cuts or edge loop is cyclic - Steps for others to reproduce the error (preferably based on attached .blend file) --- %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Please attach a blend file, I cant redo this bug.%%%

%%%Please attach a blend file, I cant redo this bug.%%%

%%%I can redo the bug:

  • Add Plane
  • Loop Cut with 2 segments
  • Edge slide acts strange

Issue did not exist in 2.66a.%%%

%%%I can redo the bug: * Add Plane * Loop Cut with 2 segments * Edge slide acts strange Issue did not exist in 2.66a.%%%

%%%That's right, I've attached the file.
And lso Loop cut slide doesn't wrk with more then two cuts%%%

%%%That's right, I've attached the file. And lso Loop cut slide doesn't wrk with more then two cuts%%%

%%%attachment%%%

%%%attachment%%%

%%%The problem is not that the result is weird looking(?), but that vertex slide is being activated when segment is set to 2. vertex slide have never been activated when i have set the value to anything greater than 1.

same weird stuff happens if i select a face, and then use "edge slide" on it. Edge slide on a face have never worked before.%%%

%%%The problem is not that the result is weird looking(?), but that vertex slide is being activated when segment is set to 2. vertex slide have never been activated when i have set the value to anything greater than 1. same weird stuff happens if i select a face, and then use "edge slide" on it. Edge slide on a face have never worked before.%%%

%%%"EDGE slide have never been activated..."*%%%

%%%"EDGE slide have never been activated..."*%%%

%%%You meen never for Loop cut bigger then 1?%%%

%%%You meen never for Loop cut bigger then 1?%%%

%%%yes%%%

%%%yes%%%

%%%but v 2.66.6 r56284 activates (weird) slide for 2 cuts. I thought it's bug in a new feature)))%%%

%%%but v 2.66.6 r56284 activates (weird) slide for 2 cuts. I thought it's bug in a new feature)))%%%

%%%looks like mult-loop-cut slide was never supported?
now loopcut is more versatile, it works but not nicely in the case you show.

fixed r56318.%%%

%%%looks like mult-loop-cut slide was never supported? now loopcut is more versatile, it works but not nicely in the case you show. fixed r56318.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Works great, Thanks.%%%

%%%Works great, Thanks.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35085
No description provided.